--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="text-banner-title">Shop by category</div>
         <div class="category-items">
-            <a href="#"><img class="category-images" src="/images/Category/1.jpg"></a>
+            <a href="#"><img class="category-images" src="images/Category/1.jpg"></a>
             <a href="#"><img class="category-images" src="/images/Category/2.jpg"></a>
             <a href="#"><img class="category-images" src="/images/Category/3.jpg"></a>
             <a href="#"><img class="category-images" src="/images/Category/4.jpg"></a>
