--- a/index.html
+++ b/index.html
@@ -55,30 +55,30 @@
         <div class="text-banner-title">Shop by category</div>
         <div class="category-items">
             <a href="#"><img class="category-images" src="images/Category/1.jpg"></a>
-            <a href="#"><img class="category-images" src="/images/Category/2.jpg"></a>
-            <a href="#"><img class="category-images" src="/images/Category/3.jpg"></a>
-            <a href="#"><img class="category-images" src="/images/Category/4.jpg"></a>
-            <a href="#"><img class="category-images" src="/images/Category/5.jpg"></a>
-            <a href="#"><img class="category-images" src="/images/Category/6.jpg"></a>
-            <a href="#"><img class="category-images" src="/images/Category/7.jpg"></a>
-            <a href="#"><img class="category-images" src="/images/Category/8.jpg"></a>
-            <a href="#"><img class="category-images" src="/images/Category/9.jpg"></a>
-            <a href="#"><img class="category-images" src="/images/Category/10.jpg"></a>
+            <a href="#"><img class="category-images" src="images/Category/2.jpg"></a>
+            <a href="#"><img class="category-images" src="images/Category/3.jpg"></a>
+            <a href="#"><img class="category-images" src="images/Category/4.jpg"></a>
+            <a href="#"><img class="category-images" src="images/Category/5.jpg"></a>
+            <a href="#"><img class="category-images" src="images/Category/6.jpg"></a>
+            <a href="#"><img class="category-images" src="images/Category/7.jpg"></a>
+            <a href="#"><img class="category-images" src="images/Category/8.jpg"></a>
+            <a href="#"><img class="category-images" src="images/Category/9.jpg"></a>
+            <a href="#"><img class="category-images" src="images/Category/10.jpg"></a>
         </div>
         <div class="text-banner-title">MEDAL WORTHY BRANDS TO BAG</div>
         <div class="offer-images1">
-            <a href="#"><img class="offer-images" src="/images/Offer/1.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/2.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/3.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/4.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/5.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/6.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/7.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/8.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/9.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/10.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/11.png"></a>
-            <a href="#"><img class="offer-images" src="/images/Offer/12.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/1.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/2.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/3.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/4.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/5.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/6.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/7.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/8.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/9.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/10.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/11.png"></a>
+            <a href="#"><img class="offer-images" src="images/Offer/12.png"></a>
             
         </div>
     </main>
