--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo-ccontainer">
-            <a href="#" ><img class="img-logo" src="/images/myntra_logo.webp"></a>
+            <a href="#" ><img class="img-logo" src="images/myntra_logo.webp"></a>
         </div>
             <nav class="navigation-container">
                 <a href="#">Men</a>
